# PopBeat

./: CMakeLists.txt  README.md
src/: main.cpp
src/audio/: Engine.cpp  Engine.h  EnvelopeAD.cpp  EnvelopeAD.h  EnvelopeADSR.cpp  EnvelopeADSR.h  FilterSVF.cpp  FilterSVF.h  LFO.h  Module.h  NoiseSource.h  Oscillator.cpp  Oscillator.h  Param.h  PatchBay.cpp  PatchBay.h  Pitch.h  Presets.cpp  Presets.h  Recorder.cpp  Recorder.h  Smoother.h  StepSequencer.cpp  StepSequencer.h  VCA.h
src/ui/: App.cpp  App.h  DfamPanel.cpp  DfamPanel.h  Font.cpp  Font.h  Ms20Panel.cpp  Ms20Panel.h  PatchPanel.h  Widgets.cpp  Widgets.h
src/voices/: DfamVoice.cpp  DfamVoice.h  Ms20Voice.cpp  Ms20Voice.h
