cmake_minimum_required(VERSION 3.16)
project(PopBeat CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(PkgConfig REQUIRED)
pkg_check_modules(SDL2 REQUIRED sdl2)
pkg_check_modules(FLAC REQUIRED flac)
file(GLOB_RECURSE POPBEAT_SOURCES src/*.cpp)
add_executable(popbeat ${POPBEAT_SOURCES})
target_include_directories(popbeat PRIVATE ${SDL2_INCLUDE_DIRS} ${FLAC_INCLUDE_DIRS} src)
target_link_libraries(popbeat PRIVATE ${SDL2_LIBRARIES} ${FLAC_LIBRARIES})
target_compile_options(popbeat PRIVATE ${SDL2_CFLAGS_OTHER} ${FLAC_CFLAGS_OTHER} -O2 -Wall -Wextra)
